AMQ-9370 - Fix compatibility in test with java 8